[package]
authors = ["styvane <styvane@acm.org>"]
edition = "2021"
license = "Do What The F*ck You Want To Public License"
name = "payeng"
version = "0.1.0"

default-run = "payeng"

[[bin]]
name = "payeng"
path = "bin/engine.rs"

[dependencies]
crossbeam = "0.8.1"
csv = "1.1.6"
parking_lot = "0.12.0"
rust_decimal = "1.23.1"
serde = {version = "1.0.137", features = ["derive"]}
thiserror = "1.0.31"
tracing = "0.1.34"
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = {version = "0.3.11", features = ["env-filter", "registry"]}

[dev-dependencies]
itertools = "0.10.3"
quickcheck = "1"
quickcheck_macros = "1"
